kubernetes/app-deployments/auth-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
spec:
  selector:
    matchLabels:
      app: auth-service
  replicas: 1
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - name: auth-service
          image: auth-service:1.0
          ports:
            - containerPort: 2020
          env: # Setting Enviornmental Variables
            - name: DB_HOST
              value: mysql

            - name: DB_NAME # Setting Database name from configMap
              value: school_db

            - name: DB_USERNAME
              value: root

            - name: DB_PASSWORD
              value: root
