kubernetes/app-deployments/examination-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: examination-deployment
spec:
  selector:
    matchLabels:
      app: examination-service
  replicas: 1
  template:
    metadata:
      labels:
        app: examination-service
    spec:
      containers:
        - name: examination-service
          image: examination-service:1.0
          ports:
            - containerPort: 9090
          env:   # Setting Enviornmental Variables
            - name: DB_HOST
              value: mysql
              
            - name: DB_NAME  # Setting Database name from configMap
              value: school_db

            - name: DB_USERNAME
              value: root

            - name: DB_PASSWORD
              value: root
