kubernetes/app-deployments/review-deployment copy.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: review-service
    service: review-service
  name: review-service
spec:
  ports:
    - port: 7070
      name: high
      protocol: TCP
      targetPort: 7070
  selector:
    app: review-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: review-service
    version: v1
  name: review-service-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: review-service
      version: v1
  template:
    metadata:
      labels:
        app: review-service
        version: v1
    spec:
      containers:
        - image: review-service-v1:1.0
          name: review-service
          ports:
            - containerPort: 7070
          env: # Setting Enviornmental Variables
            - name: DB_HOST
              value: mysql

            - name: DB_NAME # Setting Database name from configMap
              value: school_db

            - name: DB_USERNAME
              value: root

            - name: DB_PASSWORD
              value: root

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: review-service
    version: v2
  name: review-service-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: review-service
      version: v2
  template:
    metadata:
      labels:
        app: review-service
        version: v2
    spec:
      containers:
        - image: review-service-v2:1.0
          name: review-service
          ports:
            - containerPort: 7070
          env: # Setting Enviornmental Variables
            - name: DB_HOST
              value: mysql

            - name: DB_NAME # Setting Database name from configMap
              value: school_db

            - name: DB_USERNAME
              value: root

            - name: DB_PASSWORD
              value: root
