kubernetes/app-deployments/basic-gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: my-gateway
spec:
  gatewayClassName: cilium
  listeners:
    - protocol: HTTP
      port: 80
      name: web-gw
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: http-app-1
spec:
  parentRefs:
    - name: my-gateway
      namespace: default
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/v1/registration-service
      backendRefs:
        - name: registration-service
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: http-app-2
spec:
  parentRefs:
    - name: my-gateway
      namespace: default
  rules:
    - matches:
      - headers:
        - type: Exact
          name: exam
          value: ok
              
        path:
          type: PathPrefix
          value: /api/v1/examination-service
          
      backendRefs:
        - name: examination-service
          port: 9090

---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: http-app-3
spec:
  parentRefs:
    - name: my-gateway
      namespace: default
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/v1/review-service
      backendRefs:
        - kind: Service
          name: review-service-v1
          port: 7070
          weight: 50
        - kind: Service
          name: review-service-v2
          port: 7080
          weight: 50
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: http-app-4
spec:
  parentRefs:
    - name: my-gateway
      namespace: default
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: client-cluster-ip-service
          port: 3000
