kubernetes/app-deployments/https-gateway-filters.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: tls-gateway
  annotations:
    ingress.kubernetes.io/enable-cors: "true"
spec:
  gatewayClassName: cilium
  listeners:
    - name: https-1
      protocol: HTTPS
      port: 443
      hostname: "students.ruh.ac.lk"
      tls:
        certificateRefs:
          - kind: Secret
            name: ruh-tls-cert
    - name: https-2
      protocol: HTTPS
      port: 443
      hostname: "exams.ruh.ac.lk"
      tls:
        certificateRefs:
          - kind: Secret
            name: ruh-tls-cert
    - name: https-3
      protocol: HTTPS
      port: 443
      hostname: "reviews.ruh.ac.lk"
      tls:
        certificateRefs:
          - kind: Secret
            name: ruh-tls-cert
    - name: https-4
      protocol: HTTPS
      port: 443
      hostname: "lms.ruh.ac.lk"
      tls:
        certificateRefs:
          - kind: Secret
            name: ruh-tls-cert
    - name: https-5
      protocol: HTTPS
      port: 443
      hostname: "auth.ruh.ac.lk"
      tls:
        certificateRefs:
          - kind: Secret
            name: ruh-tls-cert
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: bar-route
spec:
  parentRefs:
    - name: tls-gateway
  hostnames:
    - "students.ruh.ac.lk"
  rules:
    - matches:
        - headers:
            - type: Exact
              name: exam-reg
              value: reg
      backendRefs:
        - name: registration-service
          port: 8080
    - backendRefs:
        - name: review-service-v1
          port: 7070

---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: https-app-route-1
spec:
  parentRefs:
    - name: tls-gateway
  hostnames:
    - "exams.ruh.ac.lk"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/v1/examination-service
          headers:
            - type: Exact
              name: env
              value: canary
      backendRefs:
        - name: examination-service
          port: 9090
# ---
# apiVersion: gateway.networking.k8s.io/v1beta1
# kind: HTTPRoute
# metadata:
#   name: https-app-route-2
# spec:
#   parentRefs:
#     - name: tls-gateway
#   hostnames:
#     - "students.ruh.ac.lk"
#   rules:
#     - matches:
#         - path:
#             type: PathPrefix
#             value: /api/v1/registration-service

#       # filters:
#       #   - type: URLRewrite
#       #     urlRewrite:
#       #       hostname: auth.ruh.ac.lk
#       #       path:
#       #         type: ReplacePrefixMatch
#       #         replacePrefixMatch: /login
#       backendRefs:
#         - name: registration-service
#           port: 8080
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: https-app-route-3
spec:
  parentRefs:
    - name: tls-gateway
  hostnames:
    - "reviews.ruh.ac.lk"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/v1/review-service
      backendRefs:
        - kind: Service
          name: review-service-v1
          port: 7070
          weight: 50
        - kind: Service
          name: review-service-v2
          port: 7080
          weight: 50
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: https-app-route-6
spec:
  parentRefs:
    - name: tls-gateway
  hostnames:
    - "auth.ruh.ac.lk"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /auth-service
      backendRefs:
        - name: auth-service
          port: 2020
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: https-app-route-4
spec:
  parentRefs:
    - name: tls-gateway
  hostnames:
    - "lms.ruh.ac.lk"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: client-cluster-ip-service
          port: 3000
